--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
 
+}
+
+.card {
+
+    padding: 10px;
+    border: 1px solid black;
+}
+
+.container {
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
