--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,14 +4,28 @@
 
 }
 
+body {
+
+    padding: 25px;
+}
+
 .card {
 
     padding: 10px;
-    border: 1px solid black;
+    border: 1px solid grey;
+    list-style-type: none;
 }
 
 .container {
 
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
+
+h1,
+h4 {
+
+    text-align: center;
+    margin: 10px;
 }
